tests/semantic_errors/testcase15.c
// undefined variable

int main(void){
    int x;
    x = 2 + y;

    return x;
}